--- a/config/locales/customers.yml
+++ b/config/locales/customers.yml
@@ -43,6 +43,6 @@ nl:
         email_label: Adresse em-mail
         pass_label: Mot de passe
         forgot_pass: Paswoord vergeten?
-        click_here: Cliquez ici
+        click_here: Klik hier
         connect: Login
         warning: Dit is geen geldig e-mailadres en/of paswoord
