--- a/config/locales/devise.yml
+++ b/config/locales/devise.yml
@@ -6,7 +6,7 @@ en:
       not_locked: "was not locked"
   devise:
     failure:
-      unauthenticated: 'You need to sign in or sign up before continuing.'
+      unauthenticated: ''
       unconfirmed: 'You have to confirm your account before continuing.'
       locked: 'Your account is locked.'
       invalid: 'Invalid email or password.'
