--- a/config/locales/devise.yml
+++ b/config/locales/devise.yml
@@ -36,3 +36,11 @@ en:
         subject: 'Reset password instructions'
       unlock_instructions:
         subject: 'Unlock Instructions'
+fr:
+  devise:
+    failure:
+      unauthenticated: ''
+nl:
+  devise:
+    failure:
+      unauthenticated: ''
